tests/NormalTests/paczka1/small_fuzzy/28456639.err
Error in line 3: A23 S875 68,0
Error in line 4: VEmHBg A23 78,9
